# proiect-aai-barnachirautan

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
corpus/: sources.md
corpus/cve/: CVE-2012-5822.json  CVE-2013-1895.json  CVE-2013-4855.json  CVE-2016-3643.json  CVE-2017-9798.json  CVE-2019-0061.json  CVE-2020-26263.json  CVE-2020-7471.json  CVE-2021-30459.json  CVE-2021-34994.json  CVE-2021-35042.json  CVE-2021-44032.json  CVE-2022-24857.json  CVE-2022-28346.json  CVE-2022-28347.json  CVE-2022-29217.json  CVE-2022-30034.json  CVE-2022-36065.json  CVE-2023-36456.json  CVE-2023-38325.json  CVE-2024-23342.json  CVE-2024-47084.json  CVE-2025-66416.json  CVE-2026-33078.json  CVE-2026-33152.json  CVE-2026-33336.json  CVE-2026-7818.json
corpus/cwe/: CWE-502_deserialization.md  CWE-79_xss.md  CWE-89_sql_injection.md
corpus/framework_docs/: django_ssl.md  django_upload.md  django_xss.md
corpus/owasp/: A01_2025-Broken_Access_Control.md  A02_2025-Security_Misconfiguration.md  A03_2025-Software_Supply_Chain_Failures.md  A04_2025-Cryptographic_Failures.md
corpus/style_guides/: google_style.md  pep8.md
data/: review_exemplu.json
notebooks/: demo_pipeline.ipynb
scripts/: build_index.py  evaluate_rag.py  test_parser.py  test_retrieval.py
src/: dtos.py
src/agents/: feedback_agent.py  parser_agent.py  quality_agent.py  security_agent.py
src/graph/: workflow.py
src/tools/: vector_tools.py
