[project]
name = "proiect-aai-barnachirautan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "gitpython>=3.1.50",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "packaging>=26.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "radon>=6.0.1",
    "ragas>=0.4.3",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "vulture>=2.16",
]
